# RobinHood-pr0fit

./: .gitignore  README.md  changelog.md  default.nix  hie.yaml  robin-hood-profit.cabal  shell.nix
.github/workflows/: test.yml
data/: 2025-01.csv  2025-02.csv
exe/: RhProfit.hs
nix/: local.sources.json  sources.json
nix/haskell/: overlay.nix
src/Data/RobinHood/: Profit.hs
src/RobinHood/: AppState.hs  CellParser.hs  Char8.hs  Cmd.hs  Compactable.hs  Config.hs  CsvParser.hs  Date.hs  Instrument.hs  Money.hs  Prelude.hs  Profit.hs  Report.hs  RobinRow.hs  Run.hs  TargetPeriod.hs
test/RobinHood/Test/: Money.hs  TargetPeriod.hs
